
DESIGN ISSUES (model):
- need a model for movement of points in ice
- why does ablation curve back towards zero when elevation < 1000m ?

DESIGN ISSUES (user interface):
- do we want to show values or relative ranges (cold-to-hot) for climate controls?
- [159] user-interface design for climate experiments

HIGH PRIORITY:
- need fix for negative glacier length in ice thickness model
- visualization of ice velocity (vectors remain stationary)
- optimization of ice velocity
- add proxy for snowfall visualization
- always collect data for time-based graphs, keep "lastest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- marker flags as first test of motion

MEDIUM PRIORITY:
- model borehole as a set of moving points, connected via line segments
- repeat mountains and valley at x > 80km
- create convincing mountains, either with an image or with Java2D
- clip equilibrium line to area where it intersects ice (what happens when it doesn't intersect ice?)
- fix layout problems with main control panel
- add pseudo-3D perspective
- is magnification of zoomed view sufficient?
- remove tools by dragging them back to the trash can (or toolbox?)
- refactor common module functionality into a base class
- redesign advanced climate controls
- create graphs
- constrain tools to dragging in birds-eye bounds
- fancy animation when a tool is dropped in the trash
- add left and right arrows to zoom view, secondary viewport control
- PlayArea.verticallyAlignZoomedViewport makes a change to viewport and results in itself being called again (it works, but not very elegant)
- generalize all charts, there's too much duplicated code (ditto in controller that wires control panel to charts)

LOW PRIORITY:
- offset the temperature range and default, then add the offset back in the model